<resources>
    <string name="app_name">HelloWorld</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_web">web</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="edit_message">Enter a cat name</string>
    <string name="button_send">Send</string>
</resources>
